[package]
name = "rsilk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_silk"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }
silk-rs = { git = "https://github.com/synodriver/silk-rs.git", branch = "stream" }
bytes = "1"

[profile.dev]
panic = "unwind"

[profile.release]
strip = "debuginfo"
debug = false
lto = "fat"
panic = "abort"
incremental = false