[package]
name = "rsilk"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_silk"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16", features = ["extension-module"] }
silk-rs = "0.2"

[profile.dev]
panic = "unwind"

[profile.release]
strip = "debuginfo"
debug = false
lto = "fat"
panic = "abort"
incremental = false